# Python4IoT

./: README.md  pyproject.toml
polkit-profile/: 99-netmgr-authorization.pkla  README.md
src/bluetooth/: advertisement.py  application.py  bluetooth_exception.py  characteristic.py  defs.py  descriptor.py  device.py  service.py
src/network/: network_exception.py  network_manager.py
src/utils/: dbus_utils.py  uuid16.py
